archive/deploy/staging/deployment-slave.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: slave-ingress
  namespace: sige-slave-staging
  labels:
    app: sige-slave-staging
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: sige-slave.dev.lappis.rocks
      http:
        paths:
          - backend:
              serviceName: slave-svc
              servicePort: 80
  tls:
    - hosts:
        - sige-slave.dev.lappis.rocks
      secretName: sige-slave-staging-letsencrypt-prod-crt
---
apiVersion: v1
kind: Service
metadata:
  name: slave-svc
  namespace: sige-slave-staging
  labels:
    app: sige-slave-staging
spec:
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: sige-slave-staging
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: slave-deployment
  namespace: sige-slave-staging
  labels:
    app: sige-slave-staging
spec:
  selector:
    matchLabels:
      app: sige-slave-staging
  replicas: 1
  template:
    metadata:
      labels:
        app: sige-slave-staging
    spec:
      containers:
        - name: sige-slave-staging
          image: registry.lappis.rocks/sige-slave:latest
          command: ["sh", "scripts/start-prod.sh"]
          ports:
            - containerPort: 8000
              protocol: TCP
